idf_component_register(
    SRCS
        "app/app_main.c"
        "app/command_router.c"
        "app/command_router_admin.c"
        "app/command_router_damiao_reg.c"
        "app/command_router_feedback.c"
        "app/serial_cli.c"
        "app/serial_cli_commands.c"
        "app/serial_cli_output.c"
        "app/serial_cli_watch.c"
        "config/app_config.c"
        "core/control_loop.c"
        "core/motor_manager.c"
        "core/safety_manager.c"
        "net/wifi_udp_bridge.c"
        "net/web_control.c"
        "net/web_actions_demo.c"
        "net/web_actions_id_vendor.c"
        "net/web_actions_motor.c"
        "net/web_control_actions.c"
        "net/web_control_demo.c"
        "net/web_control_dispatch.c"
        "net/web_control_page.c"
        "net/web_control_server.c"
        "storage/param_store.c"
        "transport/can_manager.c"
        "transport/can_recovery.c"
        "transport/can_rx.c"
        "transport/can_scan.c"
        "transport/can_tx.c"
        "protocol/host_protocol.c"
        "vendors/motor_vendor.c"
        "vendors/damiao/damiao_protocol.c"
        "vendors/damiao/damiao_admin_codec.c"
        "vendors/damiao/damiao_control_codec.c"
        "vendors/damiao/damiao_feedback_parser.c"
        "vendors/damiao/damiao_register_codec.c"
        "vendors/damiao/damiao_vendor.c"
        "vendors/robstride/robstride_protocol.c"
        "vendors/robstride/robstride_vendor.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_event
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        lwip
        nvs_flash
)
